--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading . . .</div>
     <script src="App.js"></script>
   </body>
 </html>
